@startuml
'https://plantuml.com/sequence-diagram

class Game
interface Comparable

interface RankDao
{
    findByName(String name):void
    findTop():void
    getAllRankLists():List<RankLine>
    add(RankLine rankLine)):void
    addAll(List<RankLine> rankLists):void
    remove(RankLine rankLine):boolean
    deleteByName(String name):void
    sort():void
    deleteByTime(String time):boolean
    rewrite(List<RankLine> rankLists):void
}

class RankDaoImpl
{
    + findByName(String name):void
    + findTop():void
    + getAllRankLists():List<RankLine>
    + add(RankLine rankLine)):void
    + addAll(List<RankLine> rankLists):void
    + remove(RankLine rankLine):boolean
    + deleteByName(String name):void
    + sort():void
    + deleteByTime(String time):boolean
    + rewrite(List<RankLine> rankLists):void
}

class RankLine
{
    - String name
    - int score
    - String time
    + RankLine(String name, inr score, String time)
    + getScore():int
    + setScore(int score):void
    + getName():String
    + setName(String name):void
    + getTime():String
    + setTime(String time)void
    + toString():String
    + compareTo(RankLine o):int
}

RankDao <|.. RankDaoImpl
RankLine <-- RankDaoImpl
RankDao <.. Game
Comparable <|.. RankLine

@enduml